--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "better-sqlite3",
+  "name": "@redacto/better-sqlite3",
   "version": "8.4.0",
   "description": "The fastest and simplest library for SQLite3 in Node.js.",
-  "homepage": "http://github.com/WiseLibs/better-sqlite3",
+  "homepage": "http://github.com/redacto/better-sqlite3",
   "author": "Joshua Wise <joshuathomaswise@gmail.com>",
   "repository": {
     "type": "git",
