--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -36,7 +36,7 @@ jobs:
       - run: npm test
 
   publish:
-    if: ${{ github.event_name == 'release' }}
+    if: ${{ github.event_name == 'release' || github.event_name == 'workflow_dispatch' }}
     name: Publishing (NO-OP)
     runs-on: ubuntu-20.04
     needs: test
@@ -48,8 +48,8 @@ jobs:
       matrix:
         os:
           - ubuntu-20.04
-          - macos-latest
-          - windows-2019
+          # - macos-latest
+          # - windows-2019
     name: Prebuild on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     needs: publish
@@ -77,39 +77,39 @@ jobs:
       - run: npm install --ignore-scripts
       - run: ${{ env.NODE_BUILD_CMD }} -u ${{ secrets.GITHUB_TOKEN }}
 
-  prebuild-alpine-arm:
-    strategy:
-      matrix:
-        arch:
-          - arm/v7
-          - arm64
-    name: Prebuild on alpine (${{ matrix.arch }})
-    runs-on: ubuntu-latest
-    needs: publish
-    steps:
-      - uses: actions/checkout@v3
-      - uses: docker/setup-qemu-action@v1
-      - run: |
-          docker run --rm -v $(pwd):/tmp/project --entrypoint /bin/sh --platform linux/${{ matrix.arch }} node:16-alpine -c "\
-          apk add build-base git python3 --update-cache && \
-          cd /tmp/project && \
-          npm install --ignore-scripts && \
-          ${{ env.NODE_BUILD_CMD }} -u ${{ secrets.GITHUB_TOKEN }}"
+  # prebuild-alpine-arm:
+  #   strategy:
+  #     matrix:
+  #       arch:
+  #         - arm/v7
+  #         - arm64
+  #   name: Prebuild on alpine (${{ matrix.arch }})
+  #   runs-on: ubuntu-latest
+  #   needs: publish
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: docker/setup-qemu-action@v1
+  #     - run: |
+  #         docker run --rm -v $(pwd):/tmp/project --entrypoint /bin/sh --platform linux/${{ matrix.arch }} node:16-alpine -c "\
+  #         apk add build-base git python3 --update-cache && \
+  #         cd /tmp/project && \
+  #         npm install --ignore-scripts && \
+  #         ${{ env.NODE_BUILD_CMD }} -u ${{ secrets.GITHUB_TOKEN }}"
 
-  prebuild-linux-arm:
-    strategy:
-      matrix:
-        arch:
-          - arm/v7
-          - arm64
-    name: Prebuild on Linux (${{ matrix.arch }})
-    runs-on: ubuntu-latest
-    needs: publish
-    steps:
-      - uses: actions/checkout@v3
-      - uses: docker/setup-qemu-action@v1
-      - run: |
-          docker run --rm -v $(pwd):/tmp/project --entrypoint /bin/sh --platform linux/${{ matrix.arch }} node:16 -c "\
-          cd /tmp/project && \
-          npm install --ignore-scripts && \
-          ${{ env.NODE_BUILD_CMD }} -u ${{ secrets.GITHUB_TOKEN }}"
+  # prebuild-linux-arm:
+  #   strategy:
+  #     matrix:
+  #       arch:
+  #         - arm/v7
+  #         - arm64
+  #   name: Prebuild on Linux (${{ matrix.arch }})
+  #   runs-on: ubuntu-latest
+  #   needs: publish
+  #   steps:
+  #     - uses: actions/checkout@v3
+  #     - uses: docker/setup-qemu-action@v1
+  #     - run: |
+  #         docker run --rm -v $(pwd):/tmp/project --entrypoint /bin/sh --platform linux/${{ matrix.arch }} node:16 -c "\
+  #         cd /tmp/project && \
+  #         npm install --ignore-scripts && \
+  #         ${{ env.NODE_BUILD_CMD }} -u ${{ secrets.GITHUB_TOKEN }}"
