don't use org namespace

--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "@redacto/better-sqlite3",
+  "name": "redacto-better-sqlite3",
   "version": "8.4.2",
   "description": "The fastest and simplest library for SQLite3 in Node.js.",
   "homepage": "http://github.com/redacto/better-sqlite3",
   "author": "Joshua Wise <joshuathomaswise@gmail.com>",
   "repository": {
     "type": "git",
-    "url": "git://github.com/WiseLibs/better-sqlite3.git"
+    "url": "git://github.com/redacto/better-sqlite3.git"
   },
   "main": "lib/index.js",
   "files": [
