--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -48,8 +48,8 @@ jobs:
       matrix:
         os:
           - ubuntu-20.04
-          # - macos-latest
-          # - windows-2019
+          - macos-latest
+          - windows-2019
     name: Prebuild on ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     needs: publish
